Intro page and logo.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 </head>
 <body>
-	<h3>Oh Hai?</h3>
+	<img src='Akela_Logo_small.png'>
 	<p>
-		<a href='./html/index.html'>OpenVNA Docs!</a>
+		<a href='./html/index.html'>OpenVNA Docsumentation</a>
 	</p>
 
 </body>
