well, that's an embarrassing typo.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 	<img src='Akela_Logo_small.png'>
 	<p>
-		<a href='./html/index.html'>OpenVNA Docsumentation</a>
+		<a href='./html/index.html'>OpenVNA Documentation</a>
 	</p>
 
 </body>
